==================== 2.24.0.1 ====================

2008-09-20  Robert-André Mauchin  <zebob.m@pengzone.org>

	* docs/fr/fr.po: Updated French translation.

2008-07-22  Daniel Nylander <po@danielnylander.se>

	* docs/sv/sv.po: Updated Swedish translation.

2008-04-05  Ilkka Tuohela <hile@iki.fi>

	* docs/fi: Added Finnish translation by Jukka Heikkilä.

2008-03-30  Kostas Papadimas <pkst@gnome.org>

	* docs/Makefile.am: Added el to DOC_LINGUAS.
	* docs/el/el.po: Added Greek Translation by Giannis Katsampriris.

2008-03-16  Callum McKenzie  <callum@spooky-possum.org>

	* battstat_applet.ui
	* Makefile.am
	* battstat_applet.c
	* properties.c: Convert from glade to gtk-builder. Patch from Jaap
	Haitsma (bug #521082).

2008-03-12  Callum McKenzie  <callum@spooky-possum.org>

	* docs/C/battstat.xml: Use the "well-known" abbreviation HAL as
	well as the full wording (thanks to Leonardo Ferreira Fontelle,
	bug #521243) plus spelling fixes.

2008-03-08  Leonardo Ferreira Fontenelle  <leonardof@svn.gnome.org>

	* docs/Makefile.am: Added pt_BR to DOC_LINGUAS.
	* docs/pt_BR/pt_BR.po: Added Brazilian Portuguese translation by Amadeu
	A. Barbosa Júnior, with minor improvements by myself.
	* docs/pt_BR/figures/*: Added screenshots by Amadeu A. Barbosa Júnior.

2008-02-10  Kjartan Maraas  <kmaraas@gnome.org>

	* battstat.schemas.in: Add missing full stops in the long description.

2007-12-02  Changwoo Ryu  <cwryu@debian.org>

	* docs/Makefile.am (DOC_LINGUAS): Added ko.
	* docs/ko/ko.po: gnome-doc-utils migration from the old Sun
	manual. And updated Korean translation.
	* docs/ko/*.xml: Removed old XMLs.
	* docs/ko/figures/*.png: Removed old images.

2007-11-16  Callum McKenzie  <callum@spooky-possum.org>

	* acpi-linux.c: Replace a set of bad calls to strcat with
	g_strconcat. Patch from Tom Parker (Bug #434436). This should stop
	a set of crashed when the HAL daemon isn't running and we try and
	interrogate the /proc/acpi tree directly.
