@@ -513,7 +513,7 @@
 			      <property name="update_policy">GTK_UPDATE_ALWAYS</property>
 			      <property name="snap_to_ticks">False</property>
 			      <property name="wrap">False</property>
-			      <property name="adjustment">1 1 25 1 5 5</property>
+			      <property name="adjustment">1 1 25 1 5 0</property>
 			    </widget>
 			    <packing>
 			      <property name="padding">0</property>
