@@ -6,7 +6,7 @@
     <property name="lower">1</property>
     <property name="page_increment">5</property>
     <property name="step_increment">1</property>
-    <property name="page_size">5</property>
+    <property name="page_size">0</property>
     <property name="value">1</property>
   </object>
   <object class="GtkDialog" id="battstat_properties">
