@@ -272,7 +272,7 @@
 				  <property name="update_policy">GTK_UPDATE_ALWAYS</property>
 				  <property name="snap_to_ticks">False</property>
 				  <property name="wrap">False</property>
-				  <property name="adjustment">1 50 400 5 10 10</property>
+				  <property name="adjustment">1 50 400 5 10 0</property>
 	                          <accessibility>
 		                    <atkrelation target="size_label" type="labelled-by"/>
 		                    <atkrelation target="size_post_label" type="labelled-by"/>
