@@ -6,7 +6,7 @@
     <property name="lower">50</property>
     <property name="page_increment">10</property>
     <property name="step_increment">5</property>
-    <property name="page_size">10</property>
+    <property name="page_size">0</property>
     <property name="value">1</property>
   </object>
   <object class="GtkDialog" id="mc_preferences_dialog">
