@@ -1,3 +1,9 @@
+2008-09-26  Callum McKenzie  <callum@spooky-possum.org>
+
+	* mini-commander.ui:	
+	* mini-commander.glade: Set the page_size to 0 to work around
+	recent gtk sensitivity.
+
 ==================== 2.24.0.1 ====================
 
 2008-09-20  Simos Xenitellis  <simos@gnome.org>
